# yamllint

./: .coverage  .flake8  .gitignore  .python-version  UPGRADE_PYPROJECT.md  pyproject.toml  requirements_dev.txt
.github/: copilot-instructions.md
.github/workflows/: ci-win.yaml  ci.yaml
docs/: conf.py
tests/: __init__.py  common.py  test_cli.py  test_config.py  test_config_extended.py  test_config_ignore.py  test_config_simple.py  test_linter.py  test_module.py  test_parser.py  test_spec_examples.py  test_syntax_errors.py  test_yamllint_directives.py
tests/rules/: test_indentation.py  test_quoted_strings.py
yamllint/: __init__.py  __main__.py  cli.py  config.py  export_sarif.py  linter.py  parser.py  tomlconfig.py
yamllint/conf/: default.toml  relaxed.toml
